--- a/specification/No.1_Lv4/css/style.css
+++ b/specification/No.1_Lv4/css/style.css
@@ -209,10 +209,17 @@ th{
 }
 
 .topic1_contents{
-  width: 40%;
+  width: 30%;
   text-align: center;
-  box-shadow:  50px 10px 5px rgba(116, 129, 137, 0.5);
+  box-shadow:  5px 10px 5px rgba(116, 129, 137, 0.5);
   border-radius: 10px;
+}
+
+.topic1_content_top, .topic1_content_bottom{
+  width: 100%;
+  padding: 24px;
+  box-sizing: border-box;
+
 }
 
 .topic1_content_top{
@@ -223,9 +230,36 @@ th{
 .topic1_content_bottom{
   background-color: gray;
   border-radius: 0px 0px 10px 10px;
+  /* position: relative; */
+  padding: 0;
+  width: 100%;
 }
 
-.topic1_content_top, .topic1_content_bottom{
+.topic1_content_bottom_door{
+  box-sizing: border-box;
   width: 100%;
+  height: 100%;
+  /* margin: auto; */
   padding: 24px;
+  background-color: pink;
+  transition: 1s;
+  transform-origin: top;
+  border-radius: 0px 0px 10px 10px;
+}
+
+.topic1_content_bottom_door:hover{
+  transform: rotateX(-80deg);
+}
+
+.section_line{
+  width: 100%;
+  margin-top: 50px;
+}
+
+.section_line_img{
+  background: url(../img/80887712ca6d2cf915bb52c1edaffb8c_w.jpeg) repeat-x;
+  background-size: 150px;
+  /* object-fit: contain; */
+  height: 15px;
+  /* border: 1px solid black; */
 }
