--- a/specification/No.1_Lv4/css/style.css
+++ b/specification/No.1_Lv4/css/style.css
@@ -1,5 +1,6 @@
-table, tr, td{
-  border-bottom: 1px solid black;
+table, tr, th, td{
+  /* border-bottom: 1px solid black; */
+  border: 2px solid white;
 }
 
 tr, td{
@@ -10,6 +11,20 @@ th{
   font-weight: normal;
   width: 50px;
   text-align: center;
+  background-color: rgb(20, 160, 199);
+  position: relative;
+}
+
+th::after{
+  content: "";
+  position: absolute;
+  border-left: 10px solid rgb(20, 160, 199);
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  /* border: 5px solid transparent; */
+  /* transform: translateY(-50%); */
+  right: -10px;
+  top: calc(50%-10px);
 }
 
 td{
@@ -160,14 +175,14 @@ section{
   border-radius: 10px;
   width: 60%;
   text-align: center;
-  background-image: url(../img/noise.jpg);
+  /* background-image: url(../img/noise.jpg); */
   object-fit: cover;
   position: relative;
   overflow: hidden;
 }
 
 .topic1_title_inner::before{
-  background-color: rgba(100, 180, 230, 0.5);
+  /* background-color: rgba(100, 180, 230, 0.5); */
   height: 100%;
   width: 100%;
   position: absolute;
@@ -178,9 +193,20 @@ section{
 
 .topic1_title_text{
   font-size: 36px;
-  color: white;
+  color: black;
   font-weight: bold;
-  z-index: ;
+  /* z-index: ; */
+  position: relative;
+}
+
+.topic1_title_text::before{
+  background: linear-gradient(to right, blue, skyblue, green);
+  position: absolute;
+  content: "";
+  width: 20%;
+  height: 2px;
+  bottom: 0;
+  left: 40%;
 }
 
 /*table要素について*/
@@ -196,9 +222,9 @@ table{
   width: 60%;
 }
 
-th{
+/* th{
   border-right: 1px solid #000;
-}
+} */
 
 .topic1_container_wrapper{
   display: flex;
