--- a/specification/No.1_Lv4/css/style.css
+++ b/specification/No.1_Lv4/css/style.css
@@ -103,7 +103,7 @@ section{
 }
 
 .hero_img {
-  height: 500px;
+  height: 650px;
   width: 100%;
   overflow: hidden;
   /* object-fit: cover; */
@@ -157,20 +157,30 @@ section{
 .hero_title{
   letter-spacing: 0.2em;
   line-height: 1.8em;
+  /* position: relative;
+  z-index: 5; */
 }
+
+/* .hero_title::before{
+  content: 'Title';
+  position: absolute;
+  font-size: 2em;
+  font-style: italic;
+  color:rgb(167, 129, 232);
+} */
 
 .topic1, .topic2{
   width: 100%;
 }
 
-.topic1_title_container{
+.topic_title_container{
   width: 100%;
   justify-content: center;
   display: flex;
   margin-bottom: 30px;
 }
 
-.topic1_title_inner{
+.topic_title_inner{
   padding: 15px;
   border-radius: 10px;
   width: 60%;
@@ -181,7 +191,7 @@ section{
   overflow: hidden;
 }
 
-.topic1_title_inner::before{
+.topic_title_inner::before{
   /* background-color: rgba(100, 180, 230, 0.5); */
   height: 100%;
   width: 100%;
@@ -191,7 +201,7 @@ section{
   top: 0;
 }
 
-.topic1_title_text{
+.topic_title_text{
   font-size: 36px;
   color: black;
   font-weight: bold;
@@ -199,8 +209,8 @@ section{
   position: relative;
 }
 
-.topic1_title_text::before{
-  background: linear-gradient(to right, blue, skyblue, lavender);
+.topic_title_text::before{
+  background: linear-gradient(to right, lavender, rgb(11, 160, 219), lavender);
   position: absolute;
   content: "";
   width: 20%;
@@ -241,16 +251,25 @@ table{
   border-radius: 50%;
 }
 
-.topic1_container_wrapper{
-  display: flex;
-  justify-content: center;
-  gap: 100px;
+.topic1_container{
   width: 100%;
   margin-top: 80px;
+  justify-content: center;
+  display: flex;
 }
 
+.topic1_contents_package{
+  display: flex;
+  gap: 100px;
+  margin-top: 100px;
+}
+
+/* .topic1_contents:nth-child(n+2):nth-child(-n+3){
+  transform: rotate(45deg);
+} */
+
 .topic1_contents{
-  width: 30%;
+  width: 200px;
   text-align: center;
   box-shadow:  5px 10px 5px rgba(116, 129, 137, 0.5);
   border-radius: 10px;
@@ -263,16 +282,18 @@ table{
 }
 
 .topic1_content_top{
-  background-color: aqua;
+  background-color: rgb(95, 107, 234);
   border-radius: 10px 10px 0px 0px;
+  color: white;
 }
 
 .topic1_content_bottom{
-  background-color: gray;
+  background-color: rgb(255, 200, 0);
   border-radius: 0px 0px 10px 10px;
   /* position: relative; */
   padding: 0;
   width: 100%;
+  color: white;
 }
 
 .topic1_content_bottom_door{
@@ -281,7 +302,7 @@ table{
   height: 100%;
   /* margin: auto; */
   padding: 24px;
-  background-color: pink;
+  background-color: rgb(167, 129, 232);
   transition: 1s;
   transform-origin: top;
   border-radius: 0px 0px 10px 10px;
