表の幅を調整（潰れないように）

--- a/specification/No.1_Lv4/css/style.css
+++ b/specification/No.1_Lv4/css/style.css
@@ -9,7 +9,7 @@ tr, td{
 
 th{
   font-weight: normal;
-  width: 150px;
+  min-width: 150px;
   text-align: center;
   background-color: rgb(20, 160, 199);
   position: relative;
