--- a/specification/No.1_Lv4/css/style.css
+++ b/specification/No.1_Lv4/css/style.css
@@ -311,7 +311,7 @@ table{
 }
 
 .topic1_content_top{
-  background-color: rgb(95, 107, 234);
+  background-color: #87CEEB;
   border-radius: 10px 10px 0px 0px;
   color: white;
 }
@@ -331,7 +331,7 @@ table{
   height: 100%;
   /* margin: auto; */
   padding: 24px;
-  background-color: rgb(167, 129, 232);
+  background-color: #FFC0CB;
   transition: 1s;
   transform-origin: top;
   border-radius: 0px 0px 10px 10px;
