--- a/specification/No.1_Lv4/css/style.css
+++ b/specification/No.1_Lv4/css/style.css
@@ -112,15 +112,6 @@ section{
   position: relative;
 }
 
-.hero_img_left {
-  /* height: 100%; */
-  /* display: flex;
-  justify-content: center; */
-  /* overflow: hidden; */
-  /* width: calc(100/2%); */
-  /* width: 100%; */
-}
-
 .hero_img_left img{
   object-fit: cover;
   width: calc(100/3*2vw);
@@ -163,36 +154,20 @@ section{
   position: relative;
   /* position: relative;
   z-index: 5; */
+  animation-name: loading;
+  animation-iteration-count: infinite;
+  animation-duration: 1s;
+  animation-direction: alternate;
 }
 
-.anim_box {
-  background: linear-gradient(to right, #362ae0 0%,#3b79cc 50%,#42d3ed 100%);
-  border-radius: 5px;
-  max-width: 400px;
-  height: 250px;
-}
-
-.anim_box.poyopoyo {
-  animation: poyopoyo 2s ease-out infinite;
-  opacity: 1;
-}
-
-@keyframes poyopoyo {
-  0%, 40%, 60%, 80% {
-    transform: scale(1.0);
+@keyframes loading {
+  0% {
+    transform: scale(0);
   }
-  50%, 70% {
-    transform: scale(0.95);
+  100% {
+    transform: scale(1);
   }
 }
-
-/* .hero_title::before{
-  content: 'Title';
-  position: absolute;
-  font-size: 2em;
-  font-style: italic;
-  color:rgb(167, 129, 232);
-} */
 
 .topic1, .topic2{
   width: 100%;
