--- a/specification/No.1_Lv4/css/style.css
+++ b/specification/No.1_Lv4/css/style.css
@@ -277,6 +277,7 @@ table{
   text-align: center;
   box-shadow:  5px 10px 5px rgba(116, 129, 137, 0.5);
   border-radius: 10px;
+  height: fit-content;
 }
 
 .topic1_content_top, .topic1_content_bottom{
@@ -296,8 +297,9 @@ table{
 }
 
 .topic1_content_answer{
-  margin: 0;
+  margin: 20px 0px;
   position: absolute;
+  width: 100%;
 }
 
 .topic1_content_bottom{
@@ -313,7 +315,7 @@ table{
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  /* margin: auto; */
+  margin: auto;
   padding: 24px;
   background-color: #FFC0CB;
   transition: 1s;
